[features]
default = ["vulkan"]
vulkan = ["dep:vulkanalia", "dep:libloading"]


[package]
name    = "wolf-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec   = "*"
vulkanalia = { version = "*", features = ["window", "libloading"], optional = true }
winit      = "*"
log        = "*"
env_logger = "*"
libloading = { version = "*", optional = true }


